# LocalDocLens

./: .env.example  .gitignore  PRIVACY.md  README.md  SECURITY.md  bm25_store.py  chunker.py  cli.py  config.py  embedder.py  evidence_answer.py  hard_disable_onednn_v2.py  hard_patch_paddleocr_onednn.py  hybrid_retriever.py  make_scanned_pdf.py  pdf_loader.py  pyproject.toml  qwen_answer.py  remove_supplier_hardcoding.py  requirements-lock.txt  requirements-ocr.txt  requirements.txt  upgrade_cli_multi_pdf.py  vector_store.py
.github/: dependabot.yml
.github/workflows/: security-check.yml
data/: eval_questions.json
docs/: PROJECT_NOTES.md
localdoc/: agent_benchmark.py  agentic_rag.py  batch_analyze.py  batch_resumable.py  benchmark_suite.py  cli.py  config.py  extract.py  facts.py  inspect.py  learning.py  memory.py  release_check.py  report.py  runtime_security.py  security_check.py  security_endpoint_test.py  server.py  start.py  stress_eval.py  stress_test.py  verifier.py
localdoc/answering/: evidence_answer.py  qwen_answer.py
localdoc/indexing/: bm25_store.py  chunker.py  embedder.py  vector_store.py
localdoc/ingestion/: page_renderer.py  pdf_loader.py
localdoc/ocr/: printed_ocr.py
localdoc/retrieval/: hybrid_retriever.py
localdoclens.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: benchmark_localdoc.py  benchmark_verified_cache.py  benchmark_warm_api.py  verify_eval_cache.py
