[project]
name = "localdoclens"
version = "0.1.0"
description = "Local-first supplier document RAG system"
requires-python = ">=3.10"
dependencies = [
    "pymupdf",
    "typer",
    "rich",
    "sentence-transformers",
    "lancedb",
    "pandas",
    "pyarrow",
    "rank-bm25",
    "numpy",
    "pydantic",
    "torch"
]

[project.scripts]
localdoc = "localdoc.cli:app"

[tool.setuptools.packages.find]
where = ["."]